--------------------------------------------------------------------------------
drkns 12.06.2021 12:39:43 +0100 - build 5820

1. Show code point values for surrogate pairs in editor status line.

--------------------------------------------------------------------------------
drkns 12.06.2021 02:00:20 +0100 - build 5819

1. Vertical separators were shown incorrectly in the last few builds.

2. Trigger the screensaver only if the window is focused.

--------------------------------------------------------------------------------
drkns 10.06.2021 22:11:22 +0100 - build 5818

1. Hightly experimental changes in editor color processing and text rendering.
   Things should be simpler, saner and faster now. Hopefully.
   Expect bugs. Report ASAP.

2. Continue fullwidth-aware rendering.

3. Corrections of text attributes merging.

4. GCC warnings.

--------------------------------------------------------------------------------
drkns 09.06.2021 22:54:58 +0100 - build 5817

1. Correction of 5630: no need to call the sorting plugin in the "Unsorted" mode.

--------------------------------------------------------------------------------
drkns 07.06.2021 23:54:29 +0100 - build 5816

1. Forum: sorting on plugin panels is too slow.

--------------------------------------------------------------------------------
drkns 07.06.2021 22:28:28 +0100 - build 5815

1. Continue fullwidth-aware rendering.

--------------------------------------------------------------------------------
drkns 06.06.2021 21:01:06 +0100 - build 5814

1. Basic support for UTF-16 surrogates.

--------------------------------------------------------------------------------
drkns 05.06.2021 23:26:24 +0100 - build 5813

1. Continue fullwidth-aware rendering.

--------------------------------------------------------------------------------
drkns 03.06.2021 23:29:55 +0100 - build 5812

1. Workarounds for EMenu positioning in Windows Terminal.
